Covered test cases for Movie Create